# light-novel-downloader

./: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml  requirements.txt  tox.ini
downloads/: README.md
src/light_novel_downloader/: __init__.py  __main__.py  cli.py  novelfull.py  scraper.py
tests/: test_light_novel_downloader.py  test_scraper.py
