[project]
name = "light-novel-downloader"
version = "0.0.1"
authors = [
  { name="Vincent Jadraque", email="vincent.jadraque@gmail.com" },
]
description = "A command line utility to download light novels."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
Homepage = "https://github.com/vincent-l-j/light-novel-downloader"
Changelog = "https://github.com/vincent-l-j/light-novel-downloader/releases"
Issues = "https://github.com/vincent-l-j/light-novel-downloader/issues"
CI = "https://github.com/vincent-l-j/light-novel-downloader/actions"

[project.entry-points.console_scripts]
light-novel-downloader = "light_novel_downloader.cli:cli"

[project.optional-dependencies]
test = ["pytest"]
